# aiovkcom

./: .gitignore  .readthedocs.yaml  .travis.yml  404.html  Pipfile  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
aiovkcom/: __init__.py  api.py  exceptions.py  parsers.py  permissions.py  session.py  sessions.py
api/: index.html
authorization/: index.html
docs/: api.md  index.md  installation.md  requests.md
docs/source/: authorization.rst  conf.py  getting_started.rst  index.rst  installation.rst  requests.rst  session.rst
getting_started/: index.html
installation/: index.html
requests/: index.html
rest_api/: index.html
search/: search_index.json
session/: index.html
source/: api.rst  authorization.rst  conf.py  getting_started.rst  index.rst  requests.rst  rest_api.rst  session.rst
tests/: conftest.py  test_api.py  test_sessions.py
tests/data/dialogs/: access_dialog.html  auth_dialog.html  blank.html
